--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 </head>
 <body>
+  <h1> Hello World! </h1>
   <!-- icon from font-awesome -->
   <!--<i class="fa-regular fa-snowflake"></i>-->
   <!-- Script script.js linked -->
