--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html> <!-- Saul Zapata Project: "name here" 11/21/22 -->
+<!DOCTYPE html> <!-- Saul Zapata Project: "Quote Generator" 11/25/22 -->
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Template</title>
+  <title>Quote Generator</title>
   <!-- this is for the favicon "domain="css-tricks.com"" on the link can be changed to your own websit-->
   <link rel="icon" type="image/png" href="https://www.google.com/s2/favicons?domain=css-tricks.com">
   <!-- link to cdnjs font library "font-awesome" -->
@@ -14,10 +14,33 @@
 
 </head>
 <body>
-  <h1> Hello World! </h1>
   <!-- icon from font-awesome -->
   <!--<i class="fa-regular fa-snowflake"></i>-->
+  
+  <div class="quote-container" id="quote-container">
+    <!-- Quote -->
+    <div class="quote-text">
+      <i class="fas fa-quote-left"></i> <!-- fas (front awesome solid) -->
+      <span id="quote"></span> 
+    </div>
+    <!-- Author -->
+    <div class="quote-author">
+      <span id="author"></span>
+    </div>
+    <!-- Buttons -->
+      <div class="button-container">
+        <button class="twitter-button" id="twitter" title="Tweet This!">
+          <i class="fab fa-twitter"></i>
+        </button>
+        <button id="new-quote">New Quote</button>
+      </div>
+  </div>
+
+  <!-- Loader -->
+  <div class="loader" id="loader"></div>
+
   <!-- Script script.js linked -->
-  <script src="script.js"></script> 
+  <script src="quotes.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
